ported to 1.20.x